Swatch send post type to json
